# CIP-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/routes/: chat.py  contracts.py  search.py
app/database/: models.py  session.py
app/database/repositories/: chunk_repository.py  contract_repository.py
app/prompts/: metadata_extraction_prompt.txt  rag_answer_prompt.txt
app/schemas/: document_schema.py  extraction_schema.py  request_schema.py
app/services/: chunking_service.py  file_storage_service.py  file_validation_service.py  ingestion_service.py  langchain_document_service.py  markdown_normalization_service.py  metadata_extraction_service.py  rag_service.py  vector_store_service.py
app/services/document_processing/: base.py  document_extraction_service.py  docx_extractor.py  pdf_extractor.py  txt_extractor.py
