[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.102.2",
    "fastapi[standard]>=0.137.1",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langchain-pymupdf4llm>=1.27.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.42.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.51",
]
